chore: propagate pom standardization, tests, javadoc and @author fix from 4.1.x
- Add jacoco-maven-plugin 0.8.15 with 90% coverage gate
- Add central-publishing-maven-plugin 0.11.0
- Update surefire (enable tests, argLine for JaCoCo, *_Test.java pattern)
- Fix SCM URLs
- Copy test files from 4.1.x branch
- Copy Javadoc improvements from 4.1.x branch
- Standardize @author to [@Loong Wan](https://github.com/loong10k)
- Propagated to 2.7.x branch