@@ -28,9 +28,9 @@
 
     <scm>
 
-        <connection>scm:git:https:github.com/easy-4-java/${project.artifactId}.git</connection>
-        <developerConnection>scm:git:https:github.com/easy-4-java/${project.artifactId}.git</developerConnection>
-        <url>https:github.com/easy-4-java/${project.artifactId}</url>
+        <connection>scm:git:https://github.com/easy-4-java/${project.artifactId}.git</connection>
+        <developerConnection>scm:git:https://github.com/easy-4-java/${project.artifactId}.git</developerConnection>
+        <url>https://github.com/easy-4-java/${project.artifactId}</url>
         <tag>${project.artifactId}</tag>
     </scm>
 
@@ -168,18 +168,17 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <!-- 跳过单元测试 -->
-                        <skip>true</skip>
-                        <skipTests>true</skipTests>
                         <!-- forkMode 可设置值有 “never”， “once”， “always” 和 “pertest”。 pretest：
                             每一个测试创建一个新进程，为每个测试创建新的JVM是单独测试的最彻底方式，但也是最慢的，不适合hudson上持续回归。 once：在一个进程中进行所有测试。once为默认设置，在Hudson上持续回归时建议使用默认设置。
                             always：在一个进程中并行的运行脚本，Junit4.7以上版本才可以使用，surefire的版本要在2.6以上提供这个功能，其中 threadCount：执行时，指定可分配的线程数量。只和参数parallel配合使用有效。默认：5。 -->
                         <forkMode>once</forkMode>
-                        <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
+                        <argLine>${argLine} -Xmx1024m -Dfile.encoding=UTF-8</argLine>
                         <additionalClasspathElements>
                             <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
                         </additionalClasspathElements>
                         <includes>
                             <include>**/*Test.java</include>
+                        <include>**/*_Test.java</include>
                         </includes>
                         <excludes>
                             <exclude>**/TestBean.java</exclude>
@@ -238,11 +237,70 @@
                         <detectBuildFailures>true</detectBuildFailures>
                     </configuration>
                 </plugin>
+                        <!-- 中央仓库发布插件: 将制品发布至 Maven Central -->
+            <!-- https://mvnrepository.com/artifact/org.sonatype.central/central-publishing-maven-plugin -->
+            <plugin>
+                <!-- 中央仓库发布插件: 将制品发布至 Maven Central -->
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>${maven-central-publishing-plugin.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
             <!--环境检查插件：代码编译前的环境检查 -->
             <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-enforcer-plugin -->
+            
+                        <!-- 单元测试覆盖率插件: 强制要求 90% 覆盖率 -->
+            <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
+            <plugin>
+                <!-- 单元测试覆盖率插件: 强制要求 90% 覆盖率 -->
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${maven-jacoco-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>check</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <haltOnFailure>true</haltOnFailure>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.90</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <!-- 环境检查插件：代码编译前的环境检查 -->
                 <groupId>org.apache.maven.plugins</groupId>
@@ -397,7 +455,13 @@
                         <!-- 将制品 staging 至 OSS Sonatype Nexus -->
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>                    <!-- https://mvnrepository.com/artifact/org.sonatype.central/central-publishing-maven-plugin -->
+                    <plugin>
+                        <!-- 中央仓库发布插件: 将制品发布至 Maven Central -->
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
                     </plugin>
+
                 </plugins>
             </build>
         </profile>
@@ -413,6 +477,8 @@
         <disruptor-extension.version>1.0.x.20260630-SNAPSHOT</disruptor-extension.version>
         <maven.version>3.0</maven.version>
            <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <maven-jacoco-plugin.version>0.8.15</maven-jacoco-plugin.version>
+        <maven-central-publishing-plugin.version>0.11.0</maven-central-publishing-plugin.version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
